# rust-tryout

./: .gitignore  Cargo.toml  LICENSE  README.md  rust-toolchain.tomlx
flatten_submodules/: Cargo.toml
flatten_submodules/src/: main.rs  math.rs
flatten_submodules/src/math/: complex.rs  matrix.rs  vector.rs
futures_in_200_lines/: Cargo.toml  README.md
futures_in_200_lines/src/: lib.rs  main.rs
futures_in_200_lines/src/lib_modules/: executor.rs  reactor.rs  task.rs
general/: Cargo.toml
general/src/: fwk.rs  lib.rs
general/src/fwk/: approx_eq.rs  btreemap_ext.rs  comb_sort.rs  higher_order_functions.rs  map_ext.rs  map_ext_owned.rs  map_ext_ref.rs  map_iter.rs  mod.rs  quicksort.rs  ref_into_make.rs  wrapper.rs  wrapper_discr.rs  wrapper_simplified.rs
general/src/polymorphic_struct_extension/: abstr.rs  discr.rs  mod.rs  pack.rs
selective-move-closure/: Cargo.toml  README.md
self_referential/: Cargo.toml  README.md
static/: Cargo.toml  ChatGPT_How_to_Create_Lock_Free_Thread_Safe_Static_Variable_in_Rust.md  README.md
test_my_published_crates/: Cargo.toml
thread-local-drop/: Cargo.toml
thread-local-drop/examples/: thread_local_drop_example.rs  thread_local_drop_example_bad.rs  thread_local_drop_standalone.rs
thread-local-drop/src/: lib.rs  thread_local_drop.rs
tracing-timing/: Cargo.toml
