[package]
name = "general"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0", features = ["std"] }
arc-swap = "1.6.0"
once_cell = "1.17"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-core = "0.1"

# Removed "log" feature to prevent `tracng-log` from being pulled in and causing issues with `env_logger`
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }

# Below line replaced by above
# tracing-subscriber = "0.3"

hdrhistogram = "7.5"
log = "0.4"
env_logger = "0.11"

actix-web = "4.9"
nix = { version = "0.29", features = ["process", "signal"] }
thread_local = "1.1"
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
just-convert = "0.1"
