[package]
name = "general"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.9"
anyhow = { version = "1.0", features = ["std"] }
arc-swap = "1.6.0"
distrs = "0.2"
env_logger = "0.11"
hdrhistogram = "7.5"
just-convert = "0.1"
log = "0.4"
nix = { version = "0.29", features = ["process", "signal"] }
once_cell = "1.17"
rand = { version = "0.8", features = ["std_rng"] }
sha2 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
statrs = "0.18"
thiserror = "2.0"
thread_local = "1.1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-core = "0.1"

# Removed "log" feature to prevent `tracng-log` from being pulled in and causing issues with `env_logger`
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "smallvec",
    "fmt",
    "ansi",
    "std",
] }
