[package]
name = "static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
futures = "0.3"
lazy_static = "1.4.0"
once_cell = "1.17.0"
tokio = { version = "1", features = ["full"] }
