[package]
name = "test_my_published_crates"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thread_local_collect = { version = "1.0", features = ["tlcr"] }
latency_trace = { version = "0.6", features = ["tokio"] }
basic_stats = { version = "1.0.0", default-features = false, features = [
    "aok",
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
