[package]
name = "thread-local-drop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
derive_more = "0.99"

[dev-dependencies]
env_logger = "0.10"
