[package]
name = "tracing-timing-async"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-timing = "0.6"
rand = "0.8"
rand_distr = "0.4"
